--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>    
-    <link rel="stylesheet" href="css/vegas-style.css" />   
-    <link rel="stylesheet" href="vegas/vegas.css" />   
-    <link rel="stylesheet" href="vegas/vegas.min.css"/>
+    <link rel="stylesheet" href="./css/vegas-style.css" />   
+    <link rel="stylesheet" href="./vegas/vegas.css" />   
+    <link rel="stylesheet" href="./vegas/vegas.min.css"/>
     
-    <script src="js/jquery.js"></script>
-    <script src="vegas/vegas.js"></script>
-    <script src="js/images.js"></script>
+    <script src="./js/jquery.js"></script>
+    <script src="./vegas/vegas.js"></script>
+    <script src="./js/images.js"></script>
     
     <script>
       $(document).ready( function() {
