--- a/07-jquery-vegas.html
+++ b/07-jquery-vegas.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>    
-    <link rel="stylesheet" href="css/vegas-style.css" />   
-    <link rel="stylesheet" href="vegas/vegas.css" />   
+    <link rel="stylesheet" href="./css/vegas-style.css" />   
+    <link rel="stylesheet" href="./vegas/vegas.css" />   
     
-    <script src="js/jquery.js"></script>
-    <script src="vegas/vegas.js"></script>
+    <script src="./js/jquery.js"></script>
+    <script src="./vegas/vegas.js"></script>
 
     <script>
       $(document).ready( function() {
